--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -29,35 +29,35 @@ library
                      , DeepBanana.Optimize
                      , DeepBanana.Data
                      , DeepBanana.Cubits
-  build-depends:       base >= 4.7 && < 5
-                     , cuda >= 0.6.5 && < 0.7
-                     , hcudnn >= 0.1 && < 0.2
-                     , hcurand >= 0.1 && < 0.2
-                     , mtl >= 2.1 && < 2.3
-                     , primitive >= 0.6 && < 0.7
-                     , cublas >= 0.2.1 && < 0.3
-                     , vector-space >= 0.9 && < 0.11
-                     , friday >= 0.2 && < 0.3
-                     , friday-devil >= 0.1 && < 0.2
-                     , pipes >= 4.1 && < 4.2
-                     , directory >= 1.2 && < 1.3
-                     , filepath >= 1.3 && < 1.4
-                     , vector >= 0.10 && < 0.11
-                     , MonadRandom >= 0.3 && < 0.4
-                     , mmorph >= 1.0 && < 1.1
-                     , cereal >= 0.4 && < 0.5
-                     , bytestring >= 0.10 && < 0.11
-                     , deepseq >= 1.3 && < 1.4
-                     , time >= 1.4 && < 1.5
-                     , HList >= 0.4 && < 0.5
+  build-depends:       base >= 4.7
+                     , cuda >= 0.6.5
+                     , hcudnn >= 0.1
+                     , hcurand >= 0.1
+                     , mtl >= 2.1
+                     , primitive >= 0.6
+                     , cublas >= 0.2.1
+                     , vector-space >= 0.9
+                     , friday >= 0.2
+                     , friday-devil >= 0.1
+                     , pipes >= 4.1
+                     , directory >= 1.2
+                     , filepath >= 1.3
+                     , vector >= 0.10
+                     , MonadRandom >= 0.3
+                     , mmorph >= 1.0
+                     , cereal >= 0.4 
+                     , bytestring >= 0.10
+                     , deepseq >= 1.3
+                     , time >= 1.4
+                     , HList >= 0.4
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
-                     , TypeFamilies
                      , DataKinds
                      , TypeOperators
                      , PolyKinds
                      , FlexibleContexts
                      , FlexibleInstances
+                     , MultiParamTypeClasses
   Extra-libraries:     hnn_cubits
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
