--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -67,6 +67,7 @@ test-suite deep-banana-test
   main-is:             Spec.hs
   other-modules:       Test.DeepBanana.Layer.CUDA
                      , Test.DeepBanana.Layer.NumericGrad
+                     , Test.DeepBanana.Tensor
   build-depends:       base >= 4.7 && < 5
                      , deep-banana >= 0.1 && < 0.2
                      , hcudnn >= 0.1 && < 0.2
@@ -75,6 +76,7 @@ test-suite deep-banana-test
                      , vector-space >= 0.9 && < 0.11
                      , mtl >= 2.1 && < 2.3
                      , HList >= 0.4
+                     , vector >= 0.10
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   extensions:          ScopedTypeVariables
