--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -68,13 +68,13 @@ test-suite deep-banana-test
   other-modules:       Test.DeepBanana.Layer.CUDA
                      , Test.DeepBanana.Layer.NumericGrad
                      , Test.DeepBanana.Tensor
-  build-depends:       base >= 4.7 && < 5
-                     , deep-banana >= 0.1 && < 0.2
-                     , hcudnn >= 0.1 && < 0.2
-                     , hcurand >= 0.1 && < 0.2
-                     , hspec >= 2.1 && < 2.2
-                     , vector-space >= 0.9 && < 0.11
-                     , mtl >= 2.1 && < 2.3
+  build-depends:       base >= 4.7
+                     , deep-banana >= 0.1
+                     , hcudnn >= 0.1 
+                     , hcurand >= 0.1
+                     , hspec >= 2.1
+                     , vector-space >= 0.9
+                     , mtl >= 2.1
                      , HList >= 0.4
                      , vector >= 0.10
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
