--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -17,7 +17,6 @@ library
   exposed-modules:     DeepBanana
                      , DeepBanana.Layer
                      , DeepBanana.Layer.CUDA
-                     , DeepBanana.Layer.CUDA.Monad
                      , DeepBanana.Layer.CUDA.CuDNN
                      , DeepBanana.Layer.CUDA.Cublas
                      , DeepBanana.Layer.CUDA.CuRAND
@@ -68,6 +67,7 @@ test-suite deep-banana-test
   main-is:             Spec.hs
   other-modules:       Test.DeepBanana.Layer.CUDA
                      , Test.DeepBanana.Layer.NumericGrad
+                     , Test.DeepBanana.Layer.Recurrent
                      , Test.DeepBanana.Tensor
   build-depends:       base >= 4.7
                      , deep-banana >= 0.1
@@ -92,6 +92,32 @@ executable example-mnist
   hs-source-dirs:      examples/mnist/
   main-is:             Main.hs
   other-modules:       MNIST
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7
+                     , deep-banana >= 0.1
+                     , pipes >= 4.1
+                     , filepath >= 1.3
+                     , parsec >= 3.1
+                     , bytestring >= 0.10
+                     , mtl >= 2.1
+                     , wreq >= 0.4
+                     , directory >= 1.2
+                     , network-uri >= 2.6
+                     , friday >= 0.2
+                     , friday-devil >= 0.1
+                     , zlib >= 0.6
+                     , lens >= 4.13
+                     , attoparsec >= 0.13
+                     , binary >= 0.7
+                     , vector >= 0.11
+                     , HList >= 0.4
+                     , deepseq >= 1.3
+                     , mmorph >= 1.0
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+
+executable test-rec
+  hs-source-dirs:      test-rec
+  main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7
                      , deep-banana >= 0.1
