--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -50,6 +50,7 @@ library
                      , deepseq >= 1.3
                      , time >= 1.4
                      , HList >= 0.4
+                     , reflection >= 2.1
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
                      , DataKinds
@@ -138,6 +139,7 @@ executable test-rec
                      , vector >= 0.11
                      , HList >= 0.4
                      , deepseq >= 1.3
+                     , reflection >= 2.1
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
 source-repository head
