--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -17,18 +17,24 @@ library
   exposed-modules:     DeepBanana
                      , DeepBanana.Layer
                      , DeepBanana.Layer.CUDA
+                     , DeepBanana.Layer.CUDA.Exception
                      , DeepBanana.Layer.CUDA.CuDNN
+                     , DeepBanana.Layer.CUDA.CuDNN.Exception
                      , DeepBanana.Layer.CUDA.Cublas
                      , DeepBanana.Layer.CUDA.CuRAND
                      , DeepBanana.Layer.CUDA.Numeric
                      , DeepBanana.Layer.Recurrent
                      , DeepBanana.Tensor
+                     , DeepBanana.Tensor.Exception
                      , DeepBanana.Tensor.TensorScalar
                      , DeepBanana.Tensor.Shape
                      , DeepBanana.Tensor.Mutable
                      , DeepBanana.Optimize
+                     , DeepBanana.Prelude
                      , DeepBanana.Data
+                     , DeepBanana.Data.Exception
                      , DeepBanana.Cubits
+                     , DeepBanana.Exception
   build-depends:       base >= 4.7
                      , cuda >= 0.6.5
                      , hcudnn >= 0.1
@@ -51,6 +57,7 @@ library
                      , time >= 1.4
                      , HList >= 0.4
                      , reflection >= 2.1
+                     , classy-prelude >= 0.12
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
                      , DataKinds
@@ -59,6 +66,8 @@ library
                      , FlexibleContexts
                      , FlexibleInstances
                      , MultiParamTypeClasses
+                     , NoImplicitPrelude
+                     , ImplicitParams
   Extra-libraries:     hnn_cubits
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
@@ -115,6 +124,7 @@ executable example-mnist
                      , deepseq >= 1.3
                      , mmorph >= 1.0
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  extensions:          NoImplicitPrelude
 
 source-repository head
   type:     git
