--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -40,6 +40,7 @@ library
                      , cuda >= 0.6.5
                      , hcudnn >= 0.1
                      , hcurand >= 0.1
+                     , transformers >= 0.4
                      , mtl >= 2.1
                      , primitive >= 0.6
                      , cublas >= 0.2.1
@@ -125,6 +126,7 @@ executable example-mnist
                      , HList >= 0.4
                      , deepseq >= 1.3
                      , mmorph >= 1.0
+                     , cuda >= 0.7
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   extensions:          NoImplicitPrelude
 
