--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -25,6 +25,7 @@ library
                      , DeepBanana.Layer.CUDA.Numeric
                      , DeepBanana.Layer.Recurrent
                      , DeepBanana.Layer.Recurrent.Exception
+                     , DeepBanana.Layer.LSTM
                      , DeepBanana.Tensor
                      , DeepBanana.Tensor.Exception
                      , DeepBanana.Tensor.TensorScalar
@@ -37,7 +38,7 @@ library
                      , DeepBanana.Cubits
                      , DeepBanana.Exception
   build-depends:       base >= 4.7
-                     , cuda >= 0.6.5
+                     , cuda >= 0.7
                      , hcudnn >= 0.1
                      , hcurand >= 0.1
                      , transformers >= 0.4
@@ -81,6 +82,7 @@ test-suite deep-banana-test
   other-modules:       Test.DeepBanana.Layer.CUDA
                      , Test.DeepBanana.Layer.NumericGrad
                      , Test.DeepBanana.Layer.Recurrent
+                     , Test.DeepBanana.Layer.LSTM
                      , Test.DeepBanana.Tensor
   build-depends:       base >= 4.7
                      , deep-banana >= 0.1
@@ -91,6 +93,7 @@ test-suite deep-banana-test
                      , mtl >= 2.1
                      , HList >= 0.4
                      , vector >= 0.10
+                     , cuda >= 0.7
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   extensions:          ScopedTypeVariables
