--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -133,6 +133,44 @@ executable example-mnist
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   extensions:          NoImplicitPrelude
 
+executable example-tatoeba
+  
+  hs-source-dirs:      examples/tatoeba/
+  main-is:             Main.hs
+  other-modules:       Tatoeba
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7
+                     , deep-banana >= 0.1
+                     , pipes >= 4.1
+                     , filepath >= 1.3
+                     , parsec >= 3.1
+                     , bytestring >= 0.10
+                     , mtl >= 2.1
+                     , wreq >= 0.4
+                     , directory >= 1.2
+                     , network-uri >= 2.6
+                     , friday >= 0.2
+                     , friday-devil >= 0.1
+                     , bzlib >= 0.5
+                     , lens >= 4.13
+                     , attoparsec >= 0.13
+                     , binary >= 0.7
+                     , vector >= 0.11
+                     , HList >= 0.4
+                     , deepseq >= 1.3
+                     , mmorph >= 1.0
+                     , cuda >= 0.7
+                     , cereal >= 0.4
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  extensions:          NoImplicitPrelude
+                     , OverloadedStrings
+                     , FlexibleContexts
+                     , ScopedTypeVariables
+                     , TypeFamilies
+                     , DataKinds
+                     , TypeOperators
+                     , PolyKinds
+                     , DeriveGeneric
 source-repository head
   type:     git
   location: https://github.com/alexisVallet/hnn
