--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -82,6 +82,7 @@ test-suite deep-banana-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Test.DeepBanana.Layer.CUDA
+                     , Test.DeepBanana.Layer.Numeric
                      , Test.DeepBanana.Layer.NumericGrad
                      , Test.DeepBanana.Layer.Recurrent
                      , Test.DeepBanana.Layer.LSTM
