--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -20,13 +20,11 @@ library
                      , DeepBanana.Layer.CUDA.Exception
                      , DeepBanana.Layer.CUDA.CuDNN
                      , DeepBanana.Layer.CUDA.CuDNN.Exception
-                     , DeepBanana.Layer.CUDA.Cublas
                      , DeepBanana.Layer.CUDA.CuRAND
                      , DeepBanana.Layer.CUDA.Numeric
                      , DeepBanana.Layer.CUDA.Monad
                      , DeepBanana.Layer.Recurrent
                      , DeepBanana.Layer.Recurrent.Exception
-                     , DeepBanana.Layer.LSTM
                      , DeepBanana.Tensor
                      , DeepBanana.Tensor.Exception
                      , DeepBanana.Tensor.TensorScalar
@@ -41,6 +39,7 @@ library
                      , DeepBanana.Weights
                      , DeepBanana.Device
                      , DeepBanana.Device.Cubits
+                     , DeepBanana.Device.CUDA
                      , DeepBanana.Device.CuDNN
                      , DeepBanana.Device.CuRAND
                      , DeepBanana.Device.Monad
@@ -49,7 +48,6 @@ library
                      , transformers >= 0.4
                      , mtl >= 2.1
                      , primitive >= 0.6
-                     , cublas >= 0.2.1
                      , vector-space >= 0.9
                      , friday >= 0.2
                      , friday-devil >= 0.1
@@ -65,8 +63,18 @@ library
                      , time >= 1.4
                      , classy-prelude >= 0.12
                      , lens >= 4.13
+                     , MemoTrie >= 0.6
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
+                     , TypeFamilies
+                     , DataKinds
+                     , TypeOperators
+                     , PolyKinds
+                     , FlexibleContexts
+                     , FlexibleInstances
+                     , MultiParamTypeClasses
+                     , NoImplicitPrelude
+                     , ImplicitParams
   extra-libraries:     hnn_cubits
                      , cudnn
                      , curand
@@ -76,16 +84,14 @@ test-suite deep-banana-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Test.DeepBanana.Layer.CUDA
+  other-modules:       Config
+                     , Test.DeepBanana.Layer.CUDA
                      , Test.DeepBanana.Layer.Numeric
                      , Test.DeepBanana.Layer.NumericGrad
                      , Test.DeepBanana.Layer.Recurrent
-                     , Test.DeepBanana.Layer.LSTM
                      , Test.DeepBanana.Tensor
   build-depends:       base >= 4.7
                      , deep-banana >= 0.1
-                     , hcudnn >= 0.1 
-                     , hcurand >= 0.1
                      , hspec >= 2.1
                      , vector-space >= 0.9
                      , mtl >= 2.1
