Fixed the dropout bug, now everything seems to work well no matter the base monad.

--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -107,6 +107,7 @@ test-suite deep-banana-test
                      , PolyKinds
                      , FlexibleContexts
                      , FlexibleInstances
+                     , NoImplicitPrelude
 
 executable example-mnist
   hs-source-dirs:      examples/mnist/
