--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -66,6 +66,7 @@ library
                      , lens >= 4.13
                      , MemoTrie >= 0.6
                      , parallel >= 3.2
+                     , NumInstances >= 1.4
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
                      , TypeFamilies
