--- a/deep-banana.cabal
+++ b/deep-banana.cabal
@@ -61,7 +61,6 @@ library
                      , deepseq >= 1.3
                      , time >= 1.4
                      , classy-prelude >= 0.12
-                     , lens >= 4.13
                      , MemoTrie >= 0.6
                      , parallel >= 3.2
                      , NumInstances >= 1.4
@@ -95,9 +94,7 @@ test-suite deep-banana-test
                      , hspec >= 2.1
                      , vector-space >= 0.9
                      , mtl >= 2.1
-                     , HList >= 0.4
                      , vector >= 0.10
-                     , cuda >= 0.7
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   extensions:          ScopedTypeVariables
@@ -118,65 +115,24 @@ executable example-mnist
                      , deep-banana >= 0.1
                      , pipes >= 4.1
                      , filepath >= 1.3
-                     , parsec >= 3.1
                      , bytestring >= 0.10
                      , mtl >= 2.1
                      , wreq >= 0.4
+                     , lens >= 4.13
                      , directory >= 1.2
                      , network-uri >= 2.6
                      , friday >= 0.2
                      , friday-devil >= 0.1
                      , zlib >= 0.6
-                     , lens >= 4.13
                      , attoparsec >= 0.13
                      , binary >= 0.7
                      , vector >= 0.11
-                     , HList >= 0.4
                      , deepseq >= 1.3
                      , mmorph >= 1.0
-                     , cuda >= 0.7
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   extensions:          NoImplicitPrelude
                      , NoMonomorphismRestriction
 
-executable example-tatoeba
-  
-  hs-source-dirs:      examples/tatoeba/
-  main-is:             Main.hs
-  other-modules:       Tatoeba
-  default-language:    Haskell2010
-  build-depends:       base >= 4.7
-                     , deep-banana >= 0.1
-                     , pipes >= 4.1
-                     , filepath >= 1.3
-                     , parsec >= 3.1
-                     , bytestring >= 0.10
-                     , mtl >= 2.1
-                     , wreq >= 0.4
-                     , directory >= 1.2
-                     , network-uri >= 2.6
-                     , friday >= 0.2
-                     , friday-devil >= 0.1
-                     , bzlib >= 0.5
-                     , lens >= 4.13
-                     , attoparsec >= 0.13
-                     , binary >= 0.7
-                     , vector >= 0.11
-                     , HList >= 0.4
-                     , deepseq >= 1.3
-                     , mmorph >= 1.0
-                     , cuda >= 0.7
-                     , cereal >= 0.4
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  extensions:          NoImplicitPrelude
-                     , OverloadedStrings
-                     , FlexibleContexts
-                     , ScopedTypeVariables
-                     , TypeFamilies
-                     , DataKinds
-                     , TypeOperators
-                     , PolyKinds
-                     , DeriveGeneric
 source-repository head
   type:     git
-  location: https://github.com/alexisVallet/hnn
+  location: https://github.com/alexisVallet/deep-banana
